<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".Fragments.AboutFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/plain_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/stocksTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:gravity="center"
        android:text="About Alfalah"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp" />

    <ImageView
        android:id="@+id/backBtnStocks"
        android:layout_width="@dimen/_16sdp"
        android:layout_height="@dimen/_16sdp"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/_5sdp"

        android:layout_marginTop="@dimen/_16sdp"
        android:src="@drawable/back" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/alfalah_clsa_securities"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv1"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/e_Falah_Trade"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv2"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/research_portal"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp" />

</RelativeLayout>