<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ValueAddedServices.FullAccesstoAccountFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/plain_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:src="@drawable/arrow_back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="Value Added Services"
        android:textColor="@color/white"
        android:textSize="@dimen/_17sdp" />
    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="24 / 7 Access to Trading Account"
        android:textSize="@dimen/_18sdp"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_100sdp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:text="@string/afs_provides_continuous_access"
        android:layout_below="@+id/tv1"
        android:gravity="center"
        android:textColor="@color/neela"
        android:layout_marginTop="@dimen/_20sdp"
        android:textSize="@dimen/_15sdp"/>

    <RelativeLayout
        android:id="@+id/RLBottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/bottom_bar_red">



        <LinearLayout
            android:id="@+id/homeLL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/power_off"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_out"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/contactusLL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView

                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/message" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_us"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />


        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>

