<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activities.StocksActivity">


    <include
        android:id="@+id/toolbar"
        layout="@layout/plain_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <ImageView
        android:id="@+id/home"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/_13sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:src="@drawable/home" />

    <ImageView
        android:id="@+id/backBtnStocks"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_13sdp"
        android:src="@drawable/back" />

    <TextView
        android:id="@+id/stocksTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_toEndOf="@+id/backBtnStocks"
        android:text="Stocks"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sdp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/RLBottom"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@color/white"
        android:orientation="vertical"
        android:weightSum="4">

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">


            <LinearLayout
                android:id="@+id/LLStartTrading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:background="@drawable/red_circle"
                    android:gravity="center"
                    android:padding="@dimen/_18sdp">

                    <ImageView
                        android:layout_width="@dimen/_44sdp"
                        android:layout_height="@dimen/_44sdp"
                        android:src="@drawable/start_trading"


                        />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:gravity="center"
                    android:text="@string/start_trading"
                    android:textColor="@color/original_red"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/LLOpenAccountStocks"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:background="@drawable/red_circle"
                    android:gravity="center"
                    android:padding="@dimen/_18sdp">

                    <ImageView
                        android:layout_width="@dimen/_44sdp"
                        android:layout_height="@dimen/_44sdp"
                        android:src="@drawable/open_account" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:gravity="center"
                    android:text="@string/open_account"
                    android:textColor="@color/original_red"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout2"
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">


            <LinearLayout
                android:id="@+id/LLValueAddedServices"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:background="@drawable/red_circle"
                    android:gravity="center"
                    android:padding="@dimen/_18sdp">

                    <ImageView
                        android:layout_width="@dimen/_44sdp"
                        android:layout_height="@dimen/_44sdp"
                        android:src="@drawable/value_added_services"


                        />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:gravity="center"
                    android:text="@string/value_added_services"
                    android:textColor="@color/original_red"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/LLCommissionsAndTaxes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:background="@drawable/red_circle"
                    android:gravity="center"
                    android:padding="@dimen/_18sdp">

                    <ImageView
                        android:layout_width="@dimen/_44sdp"
                        android:layout_height="@dimen/_44sdp"
                        android:src="@drawable/commission___taxes" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:gravity="center"
                    android:text="@string/comissions_amp_taxes"
                    android:textColor="@color/original_red"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:id="@+id/LinearLayout3"
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/LLFaqs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:background="@drawable/red_circle"
                    android:gravity="center"
                    android:padding="@dimen/_18sdp">

                    <ImageView
                        android:layout_width="@dimen/_44sdp"
                        android:layout_height="@dimen/_44sdp"
                        android:src="@drawable/faqs"


                        />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:gravity="center"
                    android:text="@string/faqs"
                    android:textColor="@color/original_red"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:background="@drawable/red_circle"
                    android:gravity="center"
                    android:padding="@dimen/_18sdp">

                    <ImageView
                        android:layout_width="@dimen/_44sdp"
                        android:layout_height="@dimen/_44sdp"
                        android:src="@drawable/investor_education" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:gravity="center"
                    android:text="@string/investor_education"
                    android:textColor="@color/original_red"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout4"
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:background="@drawable/red_circle"
                    android:gravity="center"
                    android:padding="@dimen/_18sdp">

                    <ImageView
                        android:layout_width="@dimen/_44sdp"
                        android:layout_height="@dimen/_44sdp"
                        android:src="@drawable/commission_calculator" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:gravity="center"
                    android:text="@string/comission_calculator"
                    android:textColor="@color/original_red"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/LLPracticeTrading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:background="@drawable/red_circle"
                    android:gravity="center"
                    android:padding="@dimen/_18sdp">

                    <ImageView
                        android:layout_width="@dimen/_44sdp"
                        android:layout_height="@dimen/_44sdp"
                        android:src="@drawable/practice_trading" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:gravity="center"
                    android:text="@string/practice_trading"
                    android:textColor="@color/original_red"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/RLBottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_65sdp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottom_bar_red">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">


            <LinearLayout
                android:id="@+id/contactusLL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_weight="1"
                android:gravity="start"
                android:orientation="vertical"
                android:paddingStart="@dimen/_20sdp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="@dimen/_23sdp"
                        android:layout_height="@dimen/_23sdp"
                        android:src="@drawable/contact_us" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:text="Contact Us"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_11sdp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/symbolLL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_weight="1"
                android:gravity="end"
                android:orientation="vertical"
                android:paddingEnd="@dimen/_20sdp"

                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">


                    <ImageView
                        android:id="@+id/imageSymbol"
                        android:layout_width="@dimen/_23sdp"
                        android:layout_height="@dimen/_23sdp"
                        android:src="@drawable/exit" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:gravity="center"
                        android:text="Exit"

                        android:textColor="@color/white"
                        android:textSize="@dimen/_11sdp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>